<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChannelListActivity">

    <TextView
            android:id="@+id/channel_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_list"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/channel_list_instruction"
    />

    <TextView
            android:id="@+id/channel_list_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_channel"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/channel_list"
            app:layout_constraintTop_toBottomOf="@id/channel_list_text"/>

    <ListView
            android:id="@+id/channel_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_channel_name"
            app:layout_constraintTop_toBottomOf="@id/channel_list_instruction">
    </ListView>

    <EditText
            android:id="@+id/create_channel_name"
            android:hint="@string/input_channel_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/create_channel_description"
            app:layout_constraintTop_toBottomOf="@id/channel_list"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <EditText
            android:id="@+id/create_channel_description"
            android:hint="@string/input_channel_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toRightOf="@id/create_channel_name"
            app:layout_constraintRight_toLeftOf="@id/create_channel_btn"
            app:layout_constraintTop_toBottomOf="@id/channel_list"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <Button
            android:id="@+id/create_channel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            app:layout_constraintLeft_toRightOf="@id/create_channel_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/channel_list"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onCreateChannel"
    />
</android.support.constraint.ConstraintLayout>