<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <TextView
            android:id="@+id/tree_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_chat"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/treechat_description"
    />

    <TextView
            android:id="@+id/treechat_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treechat_description"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/treechat_logo"
            app:layout_constraintTop_toBottomOf="@id/tree_chat"/>

    <ImageView
            android:id="@+id/treechat_logo"
            android:src="@drawable/treechat_logo"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/treechat_description"
            app:layout_constraintBottom_toTopOf="@id/sign_in"
    />

    <Button
            android:id="@+id/creat_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sign_in"
            app:layout_constraintTop_toBottomOf="@id/treechat_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onCreateAccount"
    />

    <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintLeft_toRightOf="@id/creat_account"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/treechat_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onSignIn"
    />
</android.support.constraint.ConstraintLayout>