<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChannelActivity">

    <TextView
            android:id="@+id/channel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_list"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/exit_channel_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/message_list"
    />
    <Button
            android:id="@+id/exit_channel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            app:layout_constraintLeft_toRightOf="@id/channel_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/message_list"
            android:onClick="onExitChannel"
    />

    <ListView
            android:id="@+id/user_list"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/message_list"
            app:layout_constraintBottom_toTopOf="@id/message_input"
            app:layout_constraintTop_toBottomOf="@id/channel_name">
    </ListView>

    <ListView
            android:id="@+id/message_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            app:layout_constraintLeft_toRightOf="@id/user_list"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/message_input"
            app:layout_constraintTop_toBottomOf="@id/channel_name">
    </ListView>


    <EditText
            android:id="@+id/message_input"
            android:hint="@string/input_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/message_send_btn"
            app:layout_constraintTop_toBottomOf="@id/user_list"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <Button
            android:id="@+id/message_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintLeft_toRightOf="@id/message_input"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message_list"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onMessageSend"
    />
</android.support.constraint.ConstraintLayout>